--- a/android-frontend/app/src/main/res/values/strings.xml
+++ b/android-frontend/app/src/main/res/values/strings.xml
@@ -2,9 +2,15 @@
     <string name="app_name">TenderStar</string>
     <string name="sign_up">Sign up</string>
     <string name="login">Login</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
+    <string name="email_login">Email</string>
+    <string name="password_login">Password</string>
     <string name="login_main">Login</string>
     <string name="incorrect_login_attempts">Incorrect login attempts</string>
-    <string name="back">Back</string>
+    <string name="back_login">Back</string>
+    <string name="email_register">Email</string>
+    <string name="repeat_password">Repeat Password</string>
+    <string name="password_register">Password</string>
+    <string name="register">Register</string>
+    <string name="button">Button</string>
+    <string name="back_register">Back</string>
 </resources>
