--- a/android-frontend/app/src/main/res/values/strings.xml
+++ b/android-frontend/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="register">Register</string>
     <string name="button">Button</string>
     <string name="back_register">Back</string>
+    <string name="textview">TextView</string>
 </resources>
