--- a/android-frontend/app/src/main/res/values/strings.xml
+++ b/android-frontend/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="button">Button</string>
     <string name="back_register">Back</string>
     <string name="textview">TextView</string>
+    <string name="search">Search</string>
+    <string name="reset">Reset</string>
 </resources>
