--- a/android-frontend/app/src/main/res/values/strings.xml
+++ b/android-frontend/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="textview">TextView</string>
     <string name="search">Search</string>
     <string name="reset">Reset</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
